# chroma-key-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  benchmark_beta.py  benchmark_optimized.py  pyproject.toml
chroma_key_api/: __main__.py  main.py  server.py
classes/: file_operators.py
compositor/: create_frame.py  process_video.py
compositor_beta/: create_frame_beta.py  process_video_beta.py
file_operators/: save_temp_file.py  synthesize_audio_file.py
functions/: ConnectionManager.py  compose_movie.py  init_progress.py  process_video.py
handlers/: compose_movie.py  compose_movie_beta.py  compose_movie_frame_by_frame.py
main/: server.py  variables.py
progress/: init_progress.py
tests/: create_assets.py
tests/handlers/: test_compose_movie.py
utils/: read_video_frames.py
websocket/: ConnectionManager.py
