[tool.poetry]
name = "chroma-key-api"
version = "0.1.0"
description = ""
authors = ["SBS_takumi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
pyproject-flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[tool.pytest.ini_options]
testpaths = ["tests",]