[project]
name = "chroma-key-api"
version = "0.1.0"
description = ""
authors = [
    {name = "kuri884",email = "krc.kuribayashi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.1.2"
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"
